[package]
name = "redis-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "redis-app"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
bytes = "1.11.1"
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
log = "0.4.29"
env_logger = "0.11.10"
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.5"
